Avoid load jumping in carousel

--- a/sites/all/themes/orwell/css/orwell.main.css
+++ b/sites/all/themes/orwell/css/orwell.main.css
@@ -2672,6 +2672,27 @@ html.js input.form-autocomplete {
   }
 }
 
+.ding-carousel {
+  /* Hide the overflow of the extra wide ul below. */
+  overflow: hidden;
+}
+
+.ding-carousel ul {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  /* Set the width to ensure (within reason) that all covers are rendered on one
+   * line, let the parent clip. It is restored to 100% by the JS before
+   * activating the carousel. */
+  width: 4000px;
+}
+
+.ding-carousel li {
+  float: left;
+}
+
 @font-face {
   font-family: "icomoon";
   font-style: normal;
