--- a/sites/all/themes/orwell/sass/component/_carousel.scss
+++ b/sites/all/themes/orwell/sass/component/_carousel.scss
@@ -68,6 +68,8 @@
 
 .ding-carousel-item {
   padding-left: 20px;
+  // // display: inline-block;
+  // float: left;
 
   @include grid-media($medium) {
     padding-left: 40px;
@@ -76,4 +78,26 @@
   @include grid-media($large) {
     padding-left: 60px;
   }
+}
+
+// The following has been taken from ding_carousel.css. This avoils load jumping.
+.ding-carousel {
+  /* Hide the overflow of the extra wide ul below. */
+  overflow: hidden;
+}
+
+.ding-carousel ul {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  /* Set the width to ensure (within reason) that all covers are rendered on one
+   * line, let the parent clip. It is restored to 100% by the JS before
+   * activating the carousel. */
+  width: 4000px;
+}
+
+.ding-carousel li {
+  float: left;
 }
